--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+@import "https://fonts.googleapis.com/css?family=DM Sans";
+
+body {
+    font-family: "DM Sans";
+    background-color: #1F2B42;
+}
