--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<div class="manifest-container">
+    <img src="../../assets/Logo.png" class="darto-logo">
+    <div class="manifest-title">Explore, Collect, and Sell NFTs</div>
+    <div class="manifest-alt-title">NFT marketplace that suits your taste of art</div>
+</div>
+
+<div class="sign-in-container">
+    <button class="login-button">Login</button>
+    <button class="sign-up-button">Sign Up</button>
+</div>
