--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,1 +1,14 @@
-<p>sign-in works!</p>
+<div class="manifest-container">
+    <img src="../../assets/Logo.png" class="darto-logo">
+    <div class="manifest-title">Welcome to darto</div>
+</div>
+<div class="data-container">
+    <input type="text" class="login-input" placeholder="Email or username">
+    <input type="text" class="sign-up-input" placeholder="Password">
+    <a href="" class="forgot-password">Forgot Password</a>
+</div>
+<div class="sign-in-container">
+    <button class="login-button">Login</button>
+    <p class="sign-in-alt-message">Don't you have an account?</p>
+    <a class="sign-up">Sign Up</a>
+</div>
