--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,1 +1,16 @@
-<p>sign-up works!</p>
+<div class="manifest-container">
+    <img src="../../assets/Logo.png" class="darto-logo">
+    <div class="manifest-title">Welcome to darto</div>
+</div>
+<div class="data-container">
+    <input type="text" class="login-input" placeholder="Name">
+    <input type="text" class="login-input" placeholder="Surname">
+    <input type="email" class="login-input" placeholder="Email">
+    <input type="text" class="login-input" placeholder="Username">
+    <input type="password" class="sign-up-input" placeholder="Password">
+</div>
+<div class="sign-in-container">
+    <button class="login-button">Login</button>
+    <p class="sign-in-alt-message">Don't you have an account?</p>
+    <a class="sign-up">Sign Up</a>
+</div>
