--- a/src/app/sign-in/sign-in.component.css
+++ b/src/app/sign-in/sign-in.component.css
@@ -24,25 +24,19 @@
     padding-top: 24px;
 }
 
-.login-input {
-    margin-top: 12px;
-    height: 56px;
-    width: 100%;
-    border: 0px;
-    border-radius: 8px;
-    background-color: rgba(255, 255, 255, 0.12);
-    color: rgba(255, 255, 255, 0.5);
+.password-input {
+    margin-bottom: 24px;
 }
 
-.sign-up-input {
+input {
     margin-top: 12px;
     height: 56px;
-    width: 100%;
     border: 0px;
     border-radius: 8px;
     background-color: rgba(255, 255, 255, 0.12);
     color: rgba(255, 255, 255, 0.5);
-    margin-bottom: 24px;
+    padding-left: 12px;
+    width: calc(100% - 12px);
 }
 
 input::placeholder {
