--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -3,11 +3,11 @@
     <div class="manifest-title">Welcome to darto</div>
 </div>
 <div class="data-container">
-    <input type="text" class="login-input" placeholder="Name">
-    <input type="text" class="login-input" placeholder="Surname">
-    <input type="email" class="login-input" placeholder="Email">
-    <input type="text" class="login-input" placeholder="Username">
-    <input type="password" class="sign-up-input" placeholder="Password">
+    <input type="text" placeholder="Name">
+    <input type="text" placeholder="Surname">
+    <input type="email" placeholder="Email">
+    <input type="text" placeholder="Username">
+    <input type="password" class="password-input" placeholder="Password">
 </div>
 <div class="sign-in-container">
     <button class="login-button">Login</button>
