css classes are renamed

--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -10,7 +10,7 @@
     <input type="password" class="password-input" placeholder="Password">
 </div>
 <div class="sign-in-container">
-    <button class="login-button">Login</button>
-    <p class="sign-in-alt-message">Don't you have an account?</p>
-    <a class="sign-up">Sign Up</a>
+    <button class="sign-up-button">Sign Up</button>
+    <p class="sign-in-alt-message">Already have an account?</p>
+    <a class="login">Login</a>
 </div>
