--- a/src/app/sign-up/sign-up.component.css
+++ b/src/app/sign-up/sign-up.component.css
@@ -48,7 +48,7 @@ input::placeholder {
     height: 136px;
 }
 
-.login-button {
+.sign-up-button {
     margin-bottom: 24px;
     height: 56px;
     width: 100%;
@@ -66,7 +66,7 @@ input::placeholder {
     color: #CED4DE;
 }
 
-.sign-up {
+.login {
     color: #98DED9;
     text-align: center;
     margin-left: 16px;
