--- a/src/app/art-gallery/art-gallery.component.html
+++ b/src/app/art-gallery/art-gallery.component.html
@@ -1,1 +1,31 @@
-<p>art-gallery works!</p>
+<div class="discover-container">
+    <div class="discover-title">Discover</div>
+    <input type="text" placeholder="Search">
+    <div class="collection-filter-grid">
+        <div class="collection-filter all active">All</div>
+        <div class="collection-filter my-nfts">My NFTs</div>
+    </div>
+</div>
+
+<div class="gallery-container">
+    <div class="gallery-grid">
+        <div class="gallery-grid-item">
+            <img src="../../assets/Mask Group.png" class="nft-image">
+            <p class="nft-name">First Dummy NFT</p>
+            <div class="nft-value-grid ">
+                <p class="nft-value-label">Purchase Value:</p>
+                <p class="nft-value">0.5 SOL</p>
+            </div>
+            <button class="buy-button">Buy</button>
+        </div>
+        <div class="gallery-grid-item">
+            <img src="../../assets/Mask Group.png" class="nft-image">
+            <p class="nft-name">Second Dummy NFT</p>
+            <div class="nft-value-grid ">
+                <p class="nft-value-label">Purchase Value:</p>
+                <p class="nft-value">0.78 SOL</p>
+            </div>
+            <button class="buy-button">Buy</button>
+        </div>
+    </div>
+</div>
