sign-in be intregration

--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -3,7 +3,7 @@
     <div class="manifest-title">Welcome to darto</div>
 </div>
 <div class="data-container">
-    <input type="email" placeholder="Email or username">
+    <input type="email" placeholder="Email">
     <input type="password" class="password-input" placeholder="Password">
     <a href="" class="forgot-password">Forgot Password</a>
 </div>
