--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -3,8 +3,8 @@
     <div class="manifest-title">Welcome to darto</div>
 </div>
 <div class="data-container">
-    <input type="email" placeholder="Email">
-    <input type="password" class="password-input" placeholder="Password">
+    <input type="email" placeholder="Email" [(ngModel)]="email">
+    <input type="password" class="password-input" placeholder="Password" [(ngModel)]="password">
     <a href="" class="forgot-password">Forgot Password</a>
 </div>
 <div class="sign-in-container">
