--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -8,7 +8,7 @@
     <a href="" class="forgot-password">Forgot Password</a>
 </div>
 <div class="sign-in-container">
-    <button class="login-button">Login</button>
+    <button class="login-button" (click)="login()">Login</button>
     <p class="sign-in-alt-message">Don't you have an account?</p>
-    <a class="sign-up">Sign Up</a>
+    <a class="sign-up" routerLink="/sign-up">Sign Up</a>
 </div>
