--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,6 +5,6 @@
 </div>
 
 <div class="sign-in-container">
-    <button class="login-button">Login</button>
-    <button class="sign-up-button">Sign Up</button>
+    <button class="login-button" routerLink="/sign-in">Login</button>
+    <button class="sign-up-button" routerLink="/sign-up">Sign Up</button>
 </div>
