--- a/src/app/sign-in/sign-in.component.css
+++ b/src/app/sign-in/sign-in.component.css
@@ -1,5 +1,5 @@
 .manifest-container {
-    padding-left: 121px;
+    padding-left: calc(50% - 163.5px);
     width: 327px;
     padding-top: 121px;
 }
@@ -19,7 +19,7 @@
 }
 
 .data-container {
-    padding-left: 121px;
+    padding-left: calc(50% - 163.5px);
     width: 327px;
     padding-top: 24px;
 }
@@ -38,7 +38,7 @@
 .sign-in-container {
     position: absolute;
     bottom: 60px;
-    left: 121px;
+    left: calc(50% - 163.5px);
     width: 327px;
     height: 136px;
 }
@@ -68,15 +68,3 @@
     font-size: 14px;
     padding-left: calc(50% - 45px);
 }
-
-@media (max-width: 600px) {
-    .manifest-container {
-        padding-left: 48px !important;
-    }
-    .data-container {
-        padding-left: 48px !important;
-    }
-    .sign-in-container {
-        left: 60px !important;
-    }
-  }
