--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -18,7 +18,7 @@
 }
 
 .manifest-container {
-    padding-left: 121px;
+    padding-left: calc(50% - 163.5px);
     width: 327px;
     padding-top: 121px;
 }
@@ -26,7 +26,7 @@
 .sign-in-container {
     position: absolute;
     bottom: 60px;
-    left: 121px;
+    left: calc(50% - 163.5px);
     width: 327px;
     height: 136px;
 }
@@ -50,13 +50,4 @@
     background-color: rgba(255, 255, 255, 0.12);
     color: white;;
 }
-
-@media (max-width: 600px) {
-    .manifest-container {
-        padding-left: 48px !important;
-    }
-    .sign-in-container {
-        left: 48px !important;
-    }
-  }
 
